--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 
 <!DOCTYPE html>
 <html>
+<head>
+<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+</head>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<div class="begin">
+    <h1>Loading....</h1>
+</div>
+
 
 </body>
 </html>
