--- a/index.html
+++ b/index.html
@@ -29,20 +29,27 @@
 <body>
     <div class="navbar">
      <ul class="nav">
-        <li class="right"><a href="#about">Contact</a></li>
-        <li class="right"><a href="#contact">Portfolio</a></li>
-       <li class="right"><a href="#news">Services</a></li>
-         <li class="right"><a class="active" href="#home">Acceuil</a>  </li>
+        <li class="right"><a href="#contact">Contact</a></li>
+        <li class="right"><a href="#portfolio">Portfolio</a></li>
+       <li class="right"><a href="#serv">Services</a></li>
+         <li class="right"><a class="active" href="#acceuil">Acceuil</a>  </li>
          <li><a href="home"><img src="images/logo.png" alt="Logo" id="logo"/></a></li>
      </ul>
     </div>
 <div class="main">
+  <a class="anchor" id="acceuil"></a>
    <div class="intro">
+   <div class="bienvenu">
+       <h1><span id="wa">WEBAGENCY </span>: L'AGENCE DE TOUS <br> VOS PROJETS</h1>
+       <p>Vous avez un projet web? La webAgency vous aide à le réaliser!</p>
+       <a href"plusdinfos">Plus d'infos</a>
+   </div>
     <div class="slideshow-container">
             <img class="mySlides" src="images/slider/bg1.jpg">
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
         <a class="next" onclick="plusSlides(1)">&#10095;</a>
     </div>
+    <div id="grad1"></div>
     <div class="indicators"> 
             <span class="dot" onclick="currentSlide(1)"></span> 
             <span class="dot" onclick="currentSlide(2)"></span> 
@@ -55,22 +62,31 @@
         </svg>
     </div>
     <div class="container">
+      <a class="anchor" id="serv"></a>
        <div class="headlines">
         <h1>NOS SERVICES</h1>
-        <svg width="200" height="100">
-            <line x1="50" y1="50" x2="150" y2="50" style="stroke:rgb(130,130,130);stroke-width:2" />
-	        <circle cx="100" cy="50" r="10" stroke="white" stroke-width="4" fill="#5aabce" />
+        <svg width="200" height="50">
+            <line x1="50" y1="25" x2="150" y2="25" style="stroke:rgb(130,130,130);stroke-width:2" />
+	        <circle cx="100" cy="25" r="10" stroke="white" stroke-width="4" fill="#5aabce" />
             Sorry, your browser does not support inline SVG.
         </svg>
     </div>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. simply dummy text. simply dummy text</p>
     </div>
-    <div class="flex-container">
+    <div class="flex-container" >
         <div class="flexrow">
             <img src="images/main-feature.png"/> 
         </div>
         <div class="flexrow"> 
-            <img src="images/main-feature.png"/>
+           <div id="curve">
+           <img src="./try.svg" /><p>njdzdjkhabdhjabdhazjbdjhabzhjdbahdbajbdha</p></div>
+           <div id="cube"> 
+           <img src="cubes.svg" />
+           <p>Sorry, your browser does not support inline SVG.Sorry, your browser does not support inline SVG.</p>
+            </div>
+            <div id ="pie">
+            <img src="./pie.svg" />
+            <p>hudhuzzjebfhzejdbziehzudhziuheu</p></div>
         </div>
     </div>
     <div class="line">
@@ -80,6 +96,7 @@
         </svg>
     </div>
     <div class="projcontainer">
+       <a class="anchor" id="portfolio"></a>
         <div class="pres">
          <h1>NOS PROJETS</h1>
          <svg width="200" height="100">
@@ -185,6 +202,7 @@
         </svg>
     </div>
    <div class="footcontainer">
+    <a class="anchor" id="contact"></a>
      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2623.505217048271!2d2.340915615602131!3d48.88670810666664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e4334868de3%3A0xcfc3870abe2b8519!2zQmFzaWxpa2EgU2FjcsOpLUPFk3Vy!5e0!3m2!1sde!2sde!4v1536713328008" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     <div class="contact">
             <form method="post" action="traitement.php">
