--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,8 +12,6 @@
     <meta property="og:description" content="Website Creator"/>
     <meta name="author" content="">
     <title>WEBAGENCY - L'agence de tous vos projets</title>
-    <!-- Place this data between the <head> tags of your website -->
-    <title>Page Title. Maximum length 60-70 characters</title>
     <meta name="description" content="Page description. No longer than 155 characters." />
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary">
@@ -28,38 +27,37 @@
 </head>
 <body>
     <div class="navbar">
-     <ul class="nav">
-        <li class="right"><a href="#contact">Contact</a></li>
-        <li class="right"><a href="#portfolio">Portfolio</a></li>
-       <li class="right"><a href="#serv">Services</a></li>
-         <li class="right"><a class="active" href="#acceuil">Acceuil</a>  </li>
-         <li><a href="home"><img src="images/logo.png" alt="Logo" id="logo"/></a></li>
-     </ul>
+        <ul class="nav">
+            <li class="right"><a href="#contact">Contact</a></li>
+            <li class="right"><a href="#portfolio">Portfolio</a></li>
+            <li class="right"><a href="#serv">Services</a></li>
+            <li class="right"><a class="active" href="#acceuil">Acceuil</a>  </li>
+            <li><a href="home"><img src="images/logo.png" alt="Logo" id="logo"/></a></li>
+         </ul>
     </div>
-<a class="anchor" id="acceuil"></a>
-<div class="main">
-    <div class="slideshow-container">
-        <div class="intro">
-           <h1><span id="wa">WEBAGENCY </span>: L'AGENCE DE TOUS <br> VOS PROJETS!</h1>
-           <p>Vous avez un projet web? La webAgency vous aide à le réaliser!</p>
-           <a href="plusdinfos">Plus d'infos</a>
-        </div>
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
-    </div>
-      <a class="anchor" id="serv"></a>
+    <a class="anchor" id="acceuil"></a>
+    <div class="main">
+        <div class="slideshow-container">
+            <div class="intro">
+                <h1><span id="wa">WEBAGENCY </span>: L'AGENCE DE TOUS <br> VOS PROJETS!</h1>
+                <p>Vous avez un projet web? La webAgency vous aide à le réaliser!</p>
+                <a href="plusdinfos">Plus d'infos</a>
+            </div>
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </div>    
+    <a class="anchor" id="serv"></a>
     <div class="headlines">
         <h1>NOS SERVICES</h1>
         <svg width="200" height="50">
             <line x1="25" y1="25" x2="175" y2="25" />
 	        <circle cx="100" cy="25" r="9"/>
-            Sorry, your browser does not support inline SVG.
         </svg>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. simply dummy text. simply dummy text</p>
     </div>
     <div id="flex-container" >
         <div class="flex-row">
-            <img src="images/main-feature.png"/> 
+            <img src="images/main-feature.png" alt="Nos Services"/> 
         </div>
         <div class="flex-row"> 
            <p>hjfhskhvjkdjkjvlkjslvjls</p>
@@ -68,45 +66,44 @@
     <a class="anchor" id="portfolio"></a>
     <div class="projcontainer">
         <div class="pres">
-         <h1>NOS PROJETS</h1>
-         <svg width="200" height="50">
-            <line x1="25" y1="25" x2="175" y2="25" />
-	        <circle cx="100" cy="25" r="9"/>
-            Sorry, your browser does not support inline SVG.
-        </svg>
-         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.  </p>
+            <h1>NOS PROJETS</h1>
+            <svg width="200" height="50">
+                <line x1="25" y1="25" x2="175" y2="25" />
+	            <circle cx="100" cy="25" r="9"/>
+             </svg>
+             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.  </p>
         </div>
         <div class="btncont">
-          <a href="">All Works</a>
+            <a href="">All Works</a>
             <a href=""> Creative</a>
             <a href=""> Corporate</a>
             <a href=""> Portfolio</a>
         </div>
         <div class="gal">
-        <div class="responsive">
-            <div class="flexrow">
-                <a href="images/portfolio/01.jpg">
-                    <img src="images/portfolio/01.jpg" class="image"/>
-                </a>
-                <div class="overlay">
+            <div class="responsive">
+                <div class="flexrow">
+                    <a href="images/portfolio/01.jpg">
+                        <img src="images/portfolio/01.jpg" class="image" alt="Works"/>
+                    </a>
+                    <div class="overlay">
                         <div class="text">Hello World</div>
                     </div>
+                </div>
             </div>
-        </div>
-        <div class="responsive">
-            <div class="flexrow">
-                <a href="images/portfolio/02.jpg">
-                    <img src="images/portfolio/02.jpg" class=image""/>
-                </a>
+            <div class="responsive">
+                <div class="flexrow">
+                    <a href="images/portfolio/02.jpg">
+                        <img src="images/portfolio/02.jpg" class="image" alt="Works"/>
+                    </a>
                 <div class="overlay">
-                        <div class="text">Hello World</div>
-                    </div>
+                    <div class="text">Hello World</div>
+                </div>
             </div>
         </div>
         <div class="responsive">
             <div class="flexrow">
                 <a href="images/portfolio/03.jpg">
-                    <img src="images/portfolio/03.jpg" class="image"/>
+                    <img src="images/portfolio/03.jpg" class="image" alt="Works"/>
                 </a>
                 <div class="overlay">
                         <div class="text">Hello World</div>
@@ -116,75 +113,76 @@
         <div class="responsive">
             <div class="flexrow">
                 <a href="images/portfolio/04.jpg">
-                    <img src="images/portfolio/04.jpg" class="image"/>
+                    <img src="images/portfolio/04.jpg" class="image" alt="Works"/>
                 </a>
-            <div class="overlay">
-                        <div class="text">Hello World</div>
-                    </div>
+                <div class="overlay">
+                    <div class="text">Hello World</div>
+                </div>
             </div>
         </div>
         <div class="responsive">
             <div class="flexrow">
                 <a href="images/portfolio/05.jpg">
-                    <img src="images/portfolio/05.jpg" class="image"/>
+                    <img src="images/portfolio/05.jpg" class="image" alt="Works"/>
                 </a>
                 <div class="overlay">
-                        <div class="text">Hello World</div>
-                    </div>
+                    <div class="text">Hello World</div>
+                </div>
             </div>
         </div>
         <div class="responsive">
             <div class="flexrow">
                 <a href="images/portfolio/06.jpg">
-                    <img src="images/portfolio/06.jpg" class="image"/>
+                    <img src="images/portfolio/06.jpg" class="image" alt="Works"/>
                 </a>
                 <div class="overlay">
-                        <div class="text">Hello World</div>
-                    </div>
+                    <div class="text">Hello World</div>
+                </div>
             </div>
         </div>
         <div class="responsive">
             <div class="flexrow">
                 <a href="images/portfolio/07.jpg">
-                    <img src="images/portfolio/07.jpg" class="image"/>
+                    <img src="images/portfolio/07.jpg" class="image" alt="Works"/>
                 </a>
                 <div class="overlay">
-                        <div class="text">Hello World</div>
-                    </div>
+                    <div class="text">Hello World</div>
+                </div>
             </div>
         </div>
         <div class="responsive">
             <div class="flexrow">
                 <a href="images/portfolio/08.jpg">
-                    <img src="images/portfolio/08.jpg" class="image"/>
+                    <img src="images/portfolio/08.jpg" class="image" alt="Works"/>
                 </a>
                 <div class="overlay">
-                        <div class="text">Hello World</div>
-                    </div>
+                    <div class="text">Hello World</div>
+                </div>
             </div>
         </div>
     </div> 
-    </div>
+</div>
     <a class="anchor" id="contact"></a>
     <div id="map" class="Map">
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2623.505217048271!2d2.340915615602131!3d48.88670810666664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e4334868de3%3A0xcfc3870abe2b8519!2zQmFzaWxpa2EgU2FjcsOpLUPFk3Vy!5e0!3m2!1sde!2sde!4v1536713328008" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-  <div id="formm" class="Form">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2623.505217048271!2d2.340915615602131!3d48.88670810666664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e4334868de3%3A0xcfc3870abe2b8519!2zQmFzaWxpa2EgU2FjcsOpLUPFk3Vy!5e0!3m2!1sde!2sde!4v1536713328008" width="600" height="450" allowfullscreen></iframe>
+        <div id="formm" class="Form">
             <form method="post" action="traitement.php">
-             
-                   <legend>
-                   <h3>Contact Infos</h3>
+               <fieldset>
+                <legend>
+                    <h3>Contact Infos</h3>
                     <p><span id="comp">WebAgency SAS</span><br>
                        25 rue d'Hauteville 75010 Paris<br>
                        Tel: 01 02 03 04 05<br></p>
-                       </legend>
-                   <input type="text" name="name" id="name" placeholder="Name"/>
-                   <input type="email" name="email" id="email" placeholder="Email"/>
-                   <input type="text" name="subject" id="subject" placeholder="Subject"/>
-                   <textarea id="message" name="message" placeholder="Message" rows="12"></textarea>
-                   <input type="submit" value="Send Message" id="btn"/>
-    </form>
+                </legend>
+                </fieldset>
+                <input type="text" name="name" id="name" placeholder="Name"/>
+                <input type="email" name="email" id="email" placeholder="Email"/>
+                <input type="text" name="subject" id="subject" placeholder="Subject"/>
+                <textarea id="message" name="message" placeholder="Message" rows="12"></textarea>
+                <input type="submit" value="Send Message" id="btn"/>
+            </form>
+        </div>
     </div>
-</div>
 </div>
 </body>
 </html>
