--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <line x1="25" y1="15" x2="175" y2="15" />
             <circle cx="100" cy="15" r="8"/>
         </svg>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and</p>
+        <p>Vous n'êtes encore pas assez connu dans votre domaine?Nous sommes la pour vous donner les moyens d'exploiter tout le potentiel de votre entreprise.</p>
     </div>
     <div id="flex-container" >
         <div class="flex-row">
@@ -65,15 +65,15 @@
         <div class="flex-row"> 
                 <div id="courcont">
                     <img src="./try.svg" id="stat">
-                    <p><span>UX DESIGN</span><br>bfhjsdbfhjsd bfhsdbfhbsdjfbsjh jhjhd jksqdhgjqks hdjkhqkshkdjq<br>jdhkjqhkj dhqsjkdhsqkhdjkqshdjkqshdjqshjkdqkhjdqshkd hkq sdjhqs</p>
+                    <p><span>UX DESIGN</span><br>Afin que vos clients ne puissent plus se passer de vous,<br>Nous leur procurons la meilleur "User Experience" digitale possible. </p>
                 </div>
                 <div id="courcont">
                     <img src="./cubes.svg" id="cube">
-                    <p><span>UI DESIGN</span><br>bfhjsdbfhjsdbfhsdbfhbsdjfbsjhjhjhdjksqdhgjqkshdjkhqksjdhkjqshkdjq<br>jdhkjqhkjdhqsjkdhsqkhdjkqshdjkqshdjqshjkdqkhjdqshkdhkqsdjhqs</p>
+                    <p><span>UI DESIGN</span><br>Des designers toujours à la recherche de nouveautés<br>,pour que vous n'ayez jamais l'air derrière.</p>
                 </div>
                 <div id="courcont">
                     <img src="./pie.svg" id="pie">
-                    <p><span>SEO</span> <br>bfhjsdbfhjsdbfhsdbfhbsdjfbsjhjhjhdjksqdhgjqkshdjkhqksjdhkjqshkdjq<br>jdhkjqhkjdhqsjkdhsqkhdjkqshdjkqshdjqshjkdqkhjdqshkdhkqsdjhqs</p>
+                    <p><span>SEO</span> <br>Mais également de techniciens,<br>afin de vous garantir un résultat optimal.</p>
                 </div>
         </div>
     </div>
@@ -85,7 +85,7 @@
                 <line x1="25" y1="15" x2="175" y2="15" />
 	            <circle cx="100" cy="15" r="8"/>
              </svg>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and  </p>
+            <p>Voici quelques travaux dont nous sommes très fier, si cela ne vous ressemble pas, un designer fera ce qu'il faut pour que vous profitiez du site internet qui vous ressemble!</p>
         </div>
         <div class="btncont">
             <a class="act"><span id="activ"></span>All Works</a>
