--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
     <div id="flex-container" >
         <div class="flex-row">
-            <img src="images/main-feature.png" alt="Nos Services"/> 
+            <img src="images/main-feature.png" class="im" alt="Nos Services"/> 
         </div>
         <div class="flex-row"> 
                 <div id="courcont">
@@ -99,9 +99,16 @@
                     <a href="images/portfolio/01.jpg">
                         <img src="images/portfolio/01.jpg" class="image" alt="Works"/>
                     </a>
-                    <div class="overlay circle">
-                        <div class="text">Hello World</div>
+                    <div class="overlay">
+                    <div class="text">
+                        Hello World
                     </div>
+                    <div class="ico">
+                        <button class="bt">
+                           <i class="far fa-eye"></i>
+                        </button>
+                    </div>
+                </div>
                 </div>
             </div>
             <div class="responsive">
@@ -109,8 +116,15 @@
                     <a href="images/portfolio/02.jpg">
                         <img src="images/portfolio/02.jpg" class="image" alt="Works"/>
                     </a>
-                    <div class="overlay circle">
-                        <div class="text">Hello World</div>
+                    <div class="overlay">
+                        <div class="text">
+                            Hello World
+                        </div>
+                        <div class="ico">
+                            <button class="bt">
+                               <i class="far fa-eye"></i>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -119,18 +133,32 @@
                     <a href="images/portfolio/03.jpg">
                         <img src="images/portfolio/03.jpg" class="image" alt="Works"/>
                     </a>
-                    <div class="overlay circle">
-                        <div class="text">Hello World</div>
+                 <div class="overlay">
+                    <div class="text">
+                        Hello World
+                    </div>
+                    <div class="ico">
+                        <button class="bt">
+                           <i class="far fa-eye"></i>
+                        </button>
                     </div>
                 </div>
             </div>
-            <div class="responsive">
-                <div class="flexrow">
-                    <a href="images/portfolio/04.jpg">
-                        <img src="images/portfolio/04.jpg" class="image" alt="Works"/>
-                    </a>
-                <div class="overlay circle">
-                    <div class="text">Hello World</div>
+        </div>
+        <div class="responsive">
+            <div class="flexrow">
+                <a href="images/portfolio/04.jpg">
+                    <img src="images/portfolio/04.jpg" class="image" alt="Works"/>
+                </a>
+            <div class="overlay">
+                    <div class="text">
+                        Hello World
+                    </div>
+                    <div class="ico">
+                        <button class="bt">
+                           <i class="far fa-eye"></i>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -139,8 +167,15 @@
                 <a href="images/portfolio/05.jpg">
                     <img src="images/portfolio/05.jpg" class="image" alt="Works"/>
                 </a>
-                <div class="overlay circle">
-                    <div class="text">Hello World</div>
+                <div class="overlay">
+                    <div class="text">
+                        Hello World
+                    </div>
+                    <div class="ico">
+                        <button class="bt">
+                           <i class="far fa-eye"></i>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -149,8 +184,13 @@
                 <a href="images/portfolio/06.jpg">
                     <img src="images/portfolio/06.jpg" class="image" alt="Works"/>
                 </a>
-                <div class="overlay circle">
+                <div class="overlay">
                     <div class="text">Hello World</div>
+                    <div class="ico">
+                        <button class="bt">
+                           <i class="far fa-eye"></i>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -159,8 +199,15 @@
                 <a href="images/portfolio/07.jpg">
                     <img src="images/portfolio/07.jpg" class="image" alt="Works"/>
                 </a>
-                <div class="overlay circle">
-                    <div class="text">Hello World</div>
+                <div class="overlay">
+                    <div class="text">
+                        Hello World
+                    </div>
+                    <div class="ico">
+                        <button class="bt">
+                           <i class="far fa-eye"></i>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -169,10 +216,15 @@
                 <a href="images/portfolio/08.jpg">
                     <img src="images/portfolio/08.jpg" class="image" alt="Works"/>
                 </a>
-                
                 <div class="overlay">
-                   <div class="ico"><em class="far fa-eye fa-stack-1x ey"></em></div>
-                    <div class="text"><p>Hello World</p></div>
+                    <div class="text">
+                        Hello World
+                    </div>
+                    <div class="ico">
+                        <button class="bt">
+                           <i class="far fa-eye"></i>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -181,13 +233,13 @@
     <a class="anchor" id="contact"></a>
 <div class="footer">
    <div class="ggwrap">
-    <section id="carte">
+    <section class="carte">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2623.505217048271!2d2.340915615602131!3d48.88670810666664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e4334868de3%3A0xcfc3870abe2b8519!2zQmFzaWxpa2EgU2FjcsOpLUPFk3Vy!5e0!3m2!1sde!2sde!4v1536713328008" width="100%" height="100%" allowfullscreen></iframe>    
     </section>
     <div id="mapover"></div>
     </div>
-    <section id="contact">
-            <form method="post" action="traitement.php">
+    <section class="contact">
+            <form class="inlin" method="post" action="traitement.php">
                <fieldset>
                 <legend>
                     <h3>Contact Info</h3>
@@ -212,7 +264,7 @@
                 </div>
                 </fieldset>
             </form>
-        </section>
+    </section>
     </div>
 </div>
 </body>
