--- a/index.html
+++ b/index.html
@@ -232,13 +232,12 @@
 </div>
     <a class="anchor" id="contact"></a>
 <div class="footer">
-   <div class="ggwrap">
-    <section class="carte">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2623.505217048271!2d2.340915615602131!3d48.88670810666664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e4334868de3%3A0xcfc3870abe2b8519!2zQmFzaWxpa2EgU2FjcsOpLUPFk3Vy!5e0!3m2!1sde!2sde!4v1536713328008" width="100%" height="100%" allowfullscreen></iframe>    
-    </section>
-    <div id="mapover"></div>
-    </div>
-    <section class="contact">
+    <div class="ggwrap">
+        <section class="carte">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2623.505217048271!2d2.340915615602131!3d48.88670810666664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e4334868de3%3A0xcfc3870abe2b8519!2zQmFzaWxpa2EgU2FjcsOpLUPFk3Vy!5e0!3m2!1sde!2sde!4v1536713328008" width="100%" height="100%" allowfullscreen></iframe>    
+        </section>
+        <div id="mapover"></div>
+        <div class="contact">
             <form class="inlin" method="post" action="traitement.php">
                <fieldset>
                 <legend>
@@ -264,7 +263,8 @@
                 </div>
                 </fieldset>
             </form>
-    </section>
+        </div>
+        </div>
     </div>
 </div>
 </body>
